--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,16 @@
 ## base API 测试环境
 VUE_APP_REQUEST_BASE_API = '/api'
 
+VUE_APP_REQUEST_TIMEOUT = 5000
+
 # 使用本地mock  暂无
-VUE_APP_LOCAL_MOCK = false
+VUE_APP_LOCAL_MOCK = true
 
 # 代理地址 
 # VUE_APP_PROXY_TARGET = 'http://127.0.0.1:8887'
- VUE_APP_PROXY_TARGET = 'http://127.0.0.1:5050'
+
+
+VUE_APP_IMAHE_HOST = 'http://127.0.0.1:5050'
+
+VUE_APP_PROXY_TARGET = 'http://127.0.0.1:5050'
 
