--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,10 @@
 # 上线环境
 VUE_APP_BASE_API = '/api'
 
-VUE_APP_WEBPACK_API = "/socket"
+
+VUE_APP_REQUEST_TIMEOUT = 5000
+
+
+VUE_APP_IMAHE_HOST = ''
+
+VUE_APP_PROXY_TARGET = 'http://127.0.0.1:1300'
