增加项目截图

--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ VUE_APP_REQUEST_BASE_API = '/api'
 
 VUE_APP_REQUEST_TIMEOUT = 5000
 
-# 使用本地mock  暂无
+# 使用本地mock 所有请求都走mock
 VUE_APP_LOCAL_MOCK = true
 
 # 代理地址 
