--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@jiaminghi/data-view": "^2.10.0",
+    "@kangc/v-md-editor": "^1.7.11",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "crypto-js": "^4.1.1",
