--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.1.1",
     "echarts": "^4.9.0",
     "echarts5": "npm:echarts@^5.4.1",
+    "element-resize-detector": "^1.2.4",
     "element-ui": "^2.15.9",
     "js-audio-recorder": "^1.0.7",
     "js-cookie": "^2.2.1",
